--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -22,7 +22,7 @@ bien distribuido.*/
 }
 
 header {
-    background: #0e0e0e; /* Cambiar fondo del header */
+    background:#0e0e0e ; /* Cambiar fondo del header */
     display: flex; /*Ordenando y alineando los elementos dentro del header*/
     align-items: center; 
     justify-content: space-between; 
@@ -109,34 +109,71 @@ header {
     background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
 }
 /*==================== ACA IRIA EL MAIN =======================*/
+main {
+    background-color: #000000;
+}
+.d-block {
+    
+    height:800px;
+}
+
 .icon-container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .icon-content{
-    width: 20%;
-
-    display: flex;
-    flex-direction: column;     
+    width: 70%;
+    height: 300px;
+    display: flex;     
     justify-content: center;    
     align-items: center;         
     text-align: center;
 
-    margin-top: 20px;
+    margin: 30px;
+    
 }
 .icon-circle{
-    width: 100px;
-    height: 100px;
+    width:40%;
+    height:70px;
     background-color: #00ff55;
 
     box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
     transition: transform 0.5s ease;
-
-    border-radius: 100%;
-
-    display: flex;
-    justify-content: center;
+    
+    display:flex;
     align-items: center;
+    justify-content: center;
+}
+
+.imagen-rutina img {
+    width: 100%;
+    height: 100%;
+
+}
+
+.imagen-rutina {
+    width: 50%;
+    height:100%
+    
+}
+.container-info {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.parrafo-rutina {
+    font-weight: bold;
+    text-align:center;
+    
+}
+.diseño-rutina {
+    color:white
 }
 .fa-solid{
     font-size: 40px;
@@ -148,6 +185,7 @@ header {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     width: 70%;
+    
 }
 
 
