--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -112,12 +112,21 @@ header {
     background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
 }
 /*==================== ACA IRIA EL MAIN =======================*/
-main {
+.envoltorio-pagina {
     background-color: #000000;
 }
 
 .imagen-carrusel {
     width: 100%;
+}
+
+.d-block{
+    height: 800px;
+    object-fit: cover;
+}
+
+.carousel{
+    margin-bottom: 50px;
 }
 
 .section-container{
@@ -129,40 +138,35 @@ main {
 
 .div-container{
     width: 70%;
-    height: 300px;
+    height: 400px;
     margin: 30px;
 
     display: flex;     
     justify-content: center;    
     align-items: center;         
-    text-align: center;    
+    text-align: center;   
+    border: solid 1px whitesmoke;
+
+    transition: transform 0.6s ease
 }
 
-.container-info-button{
-    width:40%;
-    height:70px;
-    background-color: #00ff55;
-
-    display:flex;
-    align-items: center;
-    justify-content: center;
-
-    box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
-    transition: transform 0.5s ease;
+.div-container:hover{
+    transform: scale(1.08);
+    cursor: pointer;
 }
 
-.container-img img {
+.container-img img{
     width: 100%;
     height: 100%;
 }
 
-.container-img {
+.container-img{
     width: 50%;
     height:100%
     
 }
 
-.container-info {
+.container-info{
     width: 50%;
     height: 100%;
     display: flex;
@@ -171,25 +175,39 @@ main {
     justify-content: center;
 }
 
-.text-rutina {
-    font-weight: bold;
-    text-align:center;
-}
-
 .container-info-text {
     color:white;
     width: 70%;
-}
-
-.container-info-button:hover {
-    transform: scale(1.08);
-    cursor: pointer;
 }
 
 .div-container p{
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
 }
+
+.container-btn{
+    width: 35%;
+    height: 15%;
+
+    font-family: 'Montserrat', sans-serif;
+    background-color: #00ff55;
+    color: black;
+    padding: 15px 20px;
+    border: none;
+    text-decoration: none;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+    font-weight: bold;
+    transition: transform 0.3s ease;
+    box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
+    margin-top: 10px;
+}
+
+
 
 /*============== ACA IRIA EL QUIENES SOMOS =============================*/
 .quienes_somos-img{
@@ -254,6 +272,7 @@ main {
 /*============== ACA IRIA EL FOOTER =============================*/
 
 footer {
+    margin-top: 50px;
     background: #0e0e0e; /* Cambiar fondo del header */
     display: flex; /*Ordenando y alineando los elementos dentro del footer*/
     align-items: center; 
