--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -68,7 +68,6 @@ header {
     margin-right: 40px;
 }
 
-
 /* Clases de los anchor tags */
 .txt-home, .txt-dashboard {
     font-family: 'Montserrat', sans-serif;
@@ -227,8 +226,7 @@ header {
     height: 800px;
     width: 100%;
     opacity: 0.7;
-    object-fit: cover;
-    
+    object-fit: cover;    
 }
 .quienes_somos-seccion{
     display: flex;
@@ -240,7 +238,7 @@ header {
     margin-top: 50px;
 
     width: 70%;
-    height: 500px;
+    height: 350px;
     
     display: flex;
     flex-direction: column;
@@ -251,20 +249,21 @@ header {
     color: white;
     font-size: 50px;
     font-family: 'Montserrat', sans-serif;
+
 }
 .quienes_somos-infoBox p{
     color: white;
     font-family: 'Montserrat', sans-serif;
     width: 65%;
     line-height: 25px;
+    margin-top: 20px;
+
 }
 
 .quienes_somos-second-box{
     width: 100%;
     height: 700px;
     margin-top: 60px;
-    margin-bottom: 100px;
-
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -273,23 +272,24 @@ header {
 }
 #quienes_somos-second-contenedor{
     width: 100%;
-    height: 65%;
+    height: 100%;
+    padding-top: 10px;
 
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
+
 .box{
     width: 15%;
-    height: 100%;
+    height: 70%;
     background-color: #1a1a1a;
     padding: 20px;
-    margin: 15px;
     border-radius: 12px;
     color: white;
     text-align: center;
     box-shadow: 0 0 10px rgb(236, 235, 235);
     transition: transform 0.3s ease;
-
 }
 
 .box:hover {
@@ -306,17 +306,20 @@ header {
     font-size: 1em;
     line-height: 1.5;
     padding-inline: 1.75rem;
+    margin-top: 25px;
+
+    height: 100px;
 }
 
 .box i {
     font-size: 70px;
     margin-top: 45px;
-}
 
+}
 
 /*============== ACA IRIA EL FOOTER =============================*/
 
-footer {
+.footer-seccion {
     margin-top: 50px;
     background: #0e0e0e; /* Cambiar fondo del header */
     display: flex; /*Ordenando y alineando los elementos dentro del footer*/
@@ -329,10 +332,10 @@ footer {
 }
 
 .copyrightTeam {
-    font-size: 15px;
+    font-size: 20px;
 }
 
-.container-contenido-footer {
+.footer-container {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
