--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -7,12 +7,12 @@ main en el centro.*/
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+    min-height: 100vh;
 }
 
 /*Ordena el header, el main y el footer de modo que quede todo
@@ -48,7 +48,7 @@ header {
     -webkit-text-fill-color: transparent; /* El color normal del texto es invisible */
     background-clip: text; /* Para que se vean nada mas las siluetas del texto, esto para aplicar el gradiente en el hover */
     color: #FFFFFF;
-    font-size: 32px;
+    font-size: 2rem;
     padding-left: 30px;
     cursor: pointer;
     font-weight: 700;
@@ -136,14 +136,14 @@ header {
     margin-bottom: 50px;
 }
 
-.section-container{
+.tarjeta-section{
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
-.div-container{
+.tarjeta{
     width: 70%;
     height: 400px;
     margin: 30px;
@@ -157,23 +157,23 @@ header {
     transition: transform 0.6s ease
 }
 
-.div-container:hover{
+.tarjeta:hover{
     transform: scale(1.08);
     cursor: pointer;
 }
 
-.container-img img{
+.tarjeta-img img{
     width: 100%;
     height: 100%;
 }
 
-.container-img{
+.tarjeta-img{
     width: 50%;
     height:100%
     
 }
 
-.container-info{
+.tarjeta-info{
     width: 50%;
     height: 100%;
     display: flex;
@@ -187,17 +187,17 @@ header {
     text-align: center;
 }
 
-.container-info-text {
+.tarjeta-info-text {
     color:white;
     width: 70%;
 }
 
-.div-container p{
+.tarjeta p{
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
 }
 
-.container-btn{
+.tarjeta-info-btn{
     width: 35%;
     height: 15%;
 
