--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('header.css');
+@import url('main.css');
+@import url('quienes-somos.css');
+@import url('footer.css');
 
 /* Ajusto el header, el main y el footer de modo que quede
 el header pegado arriba de todo, el footer abajo de todo y el
@@ -24,350 +27,6 @@ bien distribuido.*/
         auto 1fr auto; /* auto --> adapta el tamaño del encabezado
                           1fr --> ocupa el espacio restante entre el header y el footer 
                           auto --> para que el footer se quede siempre al final de la página*/
-}
-
-header {
-    background: #0e0e0e;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #98fd92;
-    width: 100%;
-    min-height: 80px;
-    padding: 10px 0;
-}
-
-/* Logo Atlas+ */
-.txt-atlas {
-    font-family: 'Montserrat', sans-serif;
-    background: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: #FFFFFF;
-    font-size: 2rem;
-    padding-left: 30px;
-    cursor: pointer;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.txt-atlas:hover {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-}
-
-/* Nav container */
-.container-contenido-header {
-    margin-right: 40px;
-}
-
-.container-contenido-header ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    gap: 20px; /* Separación entre ítems */
-}
-
-.container-contenido-header li {
-    display: flex;
-    align-items: center;
-}
-
-/* Enlaces del menú */
-.txt-home,
-.txt-dashboard {
-    font-family: 'Montserrat', sans-serif;
-    color: #ffffff;
-    text-decoration: none;
-    padding-right: 20px;
-    cursor: pointer;
-    font-size: 20px;
-    text-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #000000, 0 0 40px #98FD92, 0 0 80px #98FD92;
-    animation: glow 1.5s infinite alternate;
-}
-
-@keyframes glow {
-    0% {
-        text-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #98FD92, 0 0 40px #98FD92, 0 0 80px #98FD92;
-    }
-    100% {
-        text-shadow: 0 0 10px #98FD92, 0 0 20px #98FD92, 0 0 40px #98FD92, 0 0 80px #98FD92, 0 0 160px #98FD92;
-    }
-}
-
-.txt-home:hover,
-.txt-dashboard:hover {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-/* Botón como enlace */
-.nav-rutinas-btn {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    line-height: 2px;
-    height: 45px;
-    background-color: #00ff55;
-    color: #000;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn-rutinas:hover {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-}
-
-/*==================== ACA IRIA EL MAIN =======================*/
-.envoltorio-pagina {
-    background-color: #000000;
-}
-
-.imagen-carrusel {
-    width: 100%;
-}
-
-.d-block{
-    height: 800px;
-    object-fit: cover;
-}
-
-.carousel{
-    margin-bottom: 50px;
-}
-
-.tarjeta-section{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.tarjeta{
-    width: 70%;
-    height: 400px;
-    margin: 30px;
-
-    display: flex;     
-    justify-content: center;    
-    align-items: center;         
-    text-align: center;   
-    border: solid 1px whitesmoke;
-
-    transition: transform 0.6s ease
-}
-
-.tarjeta:hover{
-    transform: scale(1.08);
-    cursor: pointer;
-}
-
-.tarjeta-img img{
-    width: 100%;
-    height: 100%;
-}
-
-.tarjeta-img{
-    width: 50%;
-    height:100%
-    
-}
-
-.tarjeta-info{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.text-rutina {
-    font-weight: bold;
-    text-align: center;
-}
-
-.tarjeta-info-text {
-    color:white;
-    width: 70%;
-}
-
-.tarjeta p{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-}
-
-.tarjeta-info-btn{
-    width: 35%;
-    height: 15%;
-
-    font-family: 'Montserrat', sans-serif;
-    background-color: #00ff55;
-    color: black;
-    padding: 15px 20px;
-    border: none;
-    text-decoration: none;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    cursor: pointer;
-    font-weight: bold;
-    transition: transform 0.3s ease;
-    box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
-    margin-top: 10px;
-}
-
-
-
-/*============== ACA IRIA EL QUIENES SOMOS =============================*/
-.quienes_somos-img{
-    height: 800px;
-    width: 100%;
-    opacity: 0.7;
-    object-fit: cover;    
-}
-.quienes_somos-seccion{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.quienes_somos-infoBox{
-    margin-top: 50px;
-
-    width: 70%;
-    height: 350px;
-    
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-}
-.quienes_somos-h1{
-    color: white;
-    font-size: 50px;
-    font-family: 'Montserrat', sans-serif;
-
-}
-.quienes_somos-infoBox p{
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    width: 65%;
-    line-height: 25px;
-    margin-top: 20px;
-
-}
-
-.quienes_somos-second-box{
-    width: 100%;
-    height: 700px;
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-
-}
-#quienes_somos-second-contenedor{
-    width: 100%;
-    height: 100%;
-    padding-top: 10px;
-
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.box{
-    width: 15%;
-    height: 70%;
-    background-color: #1a1a1a;
-    padding: 20px;
-    border-radius: 12px;
-    color: white;
-    text-align: center;
-    box-shadow: 0 0 10px rgb(236, 235, 235);
-    transition: transform 0.3s ease;
-}
-
-.box:hover {
-    transform: scale(1.05);
-}
-
-.box h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: white; 
-}
-
-.box p {
-    font-size: 1em;
-    line-height: 1.5;
-    padding-inline: 1.75rem;
-    margin-top: 25px;
-
-    height: 100px;
-}
-
-.box i {
-    font-size: 70px;
-    margin-top: 45px;
-
-}
-
-/*============== ACA IRIA EL FOOTER =============================*/
-
-.footer-seccion {
-    margin-top: 50px;
-    background: #0e0e0e; /* Cambiar fondo del header */
-    display: flex; /*Ordenando y alineando los elementos dentro del footer*/
-    align-items: center; 
-    justify-content: space-between; 
-    border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
-    width: 100%;
-    min-height: 80px;
-    padding: 10px 0;
-}
-
-.copyrightTeam {
-    font-size: 20px;
-}
-
-.footer-container {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-    margin: 0;
-    padding-left: 10px;
-    font-size: 10px;
-    font-family: 'Montserrat', sans-serif;
-    color: #e8fde6;
-}
-
-.equipo-facultad {
-    margin: 0;
-    padding: 0;
-    display: flexbox;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: start;
-    list-style-type: none;
 }
 
 
