--- a/Proyecto TP/frontend/css/main.css
+++ b/Proyecto TP/frontend/css/main.css
@@ -7,7 +7,7 @@
 }
 
 .d-block{
-    height: 800px;
+    min-height: 800px;
     object-fit: cover;
 }
 
@@ -24,15 +24,15 @@
 
 .tarjeta{
     width: 70%;
-    height: 400px;
+    min-height: 400px;
     margin: 30px;
-
+    padding:2rem;
     display: flex;     
     justify-content: center;    
     align-items: center;         
     text-align: center;   
-    border: solid 1px whitesmoke;
-
+    flex-wrap: wrap;
+    gap: 2rem;
     transition: transform 0.6s ease
 }
 
@@ -44,17 +44,18 @@
 .tarjeta-img img{
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 .tarjeta-img{
-    width: 50%;
-    height:100%
+    flex: 1 1 300px;
+    min-height:100%
     
 }
 
 .tarjeta-info{
-    width: 50%;
-    height: 100%;
+    flex: 1 1 300px;
+    min-height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -79,7 +80,7 @@
 .tarjeta-info-btn{
     width: 35%;
     height: 15%;
-
+    border-radius: 10px;
     font-family: 'Montserrat', sans-serif;
     background-color: #00ff55;
     color: black;
