--- a/Proyecto TP/frontend/css/main.css
+++ b/Proyecto TP/frontend/css/main.css
@@ -7,7 +7,7 @@
 }
 
 .d-block{
-    min-height: 800px;
+    height: auto;
     object-fit: cover;
 }
 
@@ -15,51 +15,40 @@
     margin-bottom: 50px;
 }
 
-.tarjeta-section{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.tarjeta-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  row-gap: 4rem;
+  column-gap: 5rem;
+  max-width: 1000px;
+  padding: 1rem;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.tarjeta{
-    width: 70%;
-    min-height: 400px;
-    margin: 30px;
-    padding:2rem;
-    display: flex;     
-    justify-content: center;    
-    align-items: center;         
-    text-align: center;   
-    flex-wrap: wrap;
-    gap: 2rem;
-    transition: transform 0.6s ease
-}
 
-.tarjeta:hover{
+.tarjeta div{
+ border: 1px #00ff55 solid;
+}
+.tarjeta-info-btn:hover{
     transform: scale(1.08);
     cursor: pointer;
+    transition: transform 0.6s ease;
 }
 
 .tarjeta-img img{
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 10px;
 }
 
-.tarjeta-img{
-    flex: 1 1 300px;
-    min-height:100%
-    
-}
 
 .tarjeta-info{
-    flex: 1 1 300px;
-    min-height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    gap: 2rem;
 }
 
 .text-rutina {
@@ -70,16 +59,12 @@
 .tarjeta-info-text {
     color:white;
     width: 70%;
-}
-
-.tarjeta p{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
+    font-size: 1.2rem;
 }
 
 .tarjeta-info-btn{
-    width: 35%;
-    height: 15%;
+    min-width: 10rem;
+    height: auto;
     border-radius: 10px;
     font-family: 'Montserrat', sans-serif;
     background-color: #00ff55;
@@ -96,5 +81,4 @@
     font-weight: bold;
     transition: transform 0.3s ease;
     box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
-    margin-top: 10px;
 }
