--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -1,54 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 /* Ajusto el header, el main y el footer de modo que quede
 el header pegado arriba de todo, el footer abajo de todo y el
 main en el centro.*/
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+    min-height: 100vh;
 }
 
-/*Ordena el header, el main y el footer de modo que quede todo
-bien distribuido.*/
-.envoltorio-pagina {
-    display: grid;
-    min-height: 100dvh; /*asegura que el contenedor ocupe al menos el 100% de la altura de la ventana*/
-    grid-template-rows: 
-        auto 1fr auto; /* auto --> adapta el tamaño del encabezado
-                          1fr --> ocupa el espacio restante entre el header y el footer 
-                          auto --> para que el footer se quede siempre al final de la página*/
-}
 
+
+/* =========== HOME PAGE =============== */
+/* =========== HEADER =============== */
 header {
-    background:#0e0e0e ; /* Cambiar fondo del header */
-    display: flex; /*Ordenando y alineando los elementos dentro del header*/
-    align-items: center; 
-    justify-content: space-between; 
-    border-bottom: 1px solid #98fd92; /* Borde verde brillante abajo del header */
+    position: fixed; /* Para que el header permanezca siempre visible */
+    top: 0; /* Para que no haya ningun espacio arriba del header */
+    left: 0; /* Lo mismo que top, pero para la izquierda */
+    z-index: 100; /* Controlando el orden de apilamiento de los elementos, de manera que le header siempre esté por encima de todos los elementos de la página */
+    background: #0e0e0e;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #98fd92;
     width: 100%;
     min-height: 80px;
     padding: 10px 0;
+    flex-wrap: wrap;
 }
 
-/* Estilo y moviendo la posición del texto Atlas+ en el header*/
+/* Scroll header */
+
+.scroll-header {
+    box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
+    transition: transform 0.3s ease;
+}
+
+nav > ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+/* Logo Atlas+ */
 .txt-atlas {
     font-family: 'Montserrat', sans-serif;
     background: #ffffff;
     display: flex;
     justify-content: center;
-    align-items:center;
-    -webkit-background-clip: text; /* Para que se vean nada mas las siluetas del texto, esto para aplicar el gradiente en el hover */
-    -webkit-text-fill-color: transparent; /* El color normal del texto es invisible */
-    background-clip: text; /* Para que se vean nada mas las siluetas del texto, esto para aplicar el gradiente en el hover */
+    align-items: center;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     color: #FFFFFF;
-    font-size: 32px;
+    font-size: 2rem;
     padding-left: 30px;
     cursor: pointer;
     font-weight: 700;
@@ -56,33 +67,41 @@ header {
 }
 
 .txt-atlas:hover {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%); 
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
 }
 
-/*Container del contenido del header, excluye el h1 */
-
+/* Nav container */
 .container-contenido-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-right: 40px;
 }
 
+.container-contenido-header ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 20px; /* Separación entre ítems */
+}
 
-/* Clases de los anchor tags */
-.txt-home, .txt-dashboard {
+.container-contenido-header li {
+    display: flex;
+    align-items: center;
+}
+
+/* Enlaces del menú */
+.txt-home,
+.txt-dashboard {
     font-family: 'Montserrat', sans-serif;
-    color:#ffffff;
+    color: #ffffff;
     text-decoration: none;
-    margin: auto;
-    padding-right: 40px;
+    padding-right: 20px;
     cursor: pointer;
     font-size: 20px;
-    color: #fff;
     text-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #000000, 0 0 40px #98FD92, 0 0 80px #98FD92;
     animation: glow 1.5s infinite alternate;
 }
-@keyframes glow { /* Keyframes sirve para controlar los pasos intermedios de una secuencia de animación en un elemento */
+
+@keyframes glow {
     0% {
         text-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #98FD92, 0 0 40px #98FD92, 0 0 80px #98FD92;
     }
@@ -91,20 +110,23 @@ header {
     }
 }
 
-.txt-home:hover, .txt-dashboard:hover {
+.txt-home:hover,
+.txt-dashboard:hover {
     background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.btn-rutinas {
+/* Botón como enlace */
+.nav-rutinas-btn {
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: normal;
     line-height: 2px;
-    height:45px;
+    height: 40px;
     background-color: #00ff55;
-    color: rgb(0, 0, 0);
+    color: #000;
     padding: 15px 20px;
     border: none;
     border-radius: 5px;
@@ -113,15 +135,22 @@ header {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: rgb(0, 255, 0) 0.3s ease;
+    transition: #00ff55 0.3s ease;
 }
 
-.btn-rutinas:hover {
+/* Cambio de color para cuando el usuario esta por clickear el enlace */
+.nav-rutinas-btn:hover {
     background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
 }
-/*==================== ACA IRIA EL MAIN =======================*/
+
+/* =========== MAIN =============== */
+
 .envoltorio-pagina {
     background-color: #000000;
+    display: grid;
+    min-height: 100dvh;
+    grid-template-rows: 
+        auto 1fr auto;
 }
 
 .imagen-carrusel {
@@ -129,7 +158,7 @@ header {
 }
 
 .d-block{
-    height: 800px;
+    height: auto;
     object-fit: cover;
 }
 
@@ -137,50 +166,41 @@ header {
     margin-bottom: 50px;
 }
 
-.section-container{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+.tarjeta-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  row-gap: 4rem;
+  column-gap: 5rem;
+  max-width: 1000px;
+  padding: 1rem;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.div-container{
-    width: 70%;
-    height: 400px;
-    margin: 30px;
 
-    display: flex;     
-    justify-content: center;    
-    align-items: center;         
-    text-align: center;   
-    border: solid 1px whitesmoke;
-
-    transition: transform 0.6s ease
+.tarjeta div{
+ border: 1px #00ff55 solid;
 }
 
-.div-container:hover{
+.tarjeta-info-btn:hover{
     transform: scale(1.08);
     cursor: pointer;
+    transition: transform 0.6s ease;
 }
 
-.container-img img{
+.tarjeta-img img{
     width: 100%;
-    height: 100%;
+    height: auto;
+    border-radius: 10px;
 }
 
-.container-img{
-    width: 50%;
-    height:100%
-    
-}
 
-.container-info{
-    width: 50%;
-    height: 100%;
+.tarjeta-info{
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    gap: 2rem;
 }
 
 .text-rutina {
@@ -188,20 +208,16 @@ header {
     text-align: center;
 }
 
-.container-info-text {
+.tarjeta-info-text {
     color:white;
     width: 70%;
+    font-size: 1.2rem;
 }
 
-.div-container p{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-}
-
-.container-btn{
-    width: 35%;
-    height: 15%;
-
+.tarjeta-info-btn{
+    min-width: 10rem;
+    height: auto;
+    border-radius: 10px;
     font-family: 'Montserrat', sans-serif;
     background-color: #00ff55;
     color: black;
@@ -217,18 +233,57 @@ header {
     font-weight: bold;
     transition: transform 0.3s ease;
     box-shadow: 0 0 30px rgba(0, 255, 85, 0.6);
-    margin-top: 10px;
 }
 
 
+/* ==================== FOOTER ================= */
 
-/*============== ACA IRIA EL QUIENES SOMOS =============================*/
+.footer-seccion {
+    margin-top: 50px;
+    background: #0e0e0e; /* Cambiar fondo del header */
+    display: flex; /*Ordenando y alineando los elementos dentro del footer*/
+    align-items: center; 
+    justify-content: center; 
+    border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
+    width: 100%;
+    min-height: 80px;
+    padding: 10px 0;
+}
+
+.copyrightTeam {
+    font-size: 20px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    margin: 0;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    color: #e8fde6;
+}
+
+.equipo-facultad {
+    margin: 0;
+    padding: 0;
+    display: flexbox;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    list-style-type: none;
+}
+
+
+/* ================ QUIENES SOMOS =============== */
+
 .quienes_somos-img{
     height: 800px;
     width: 100%;
     opacity: 0.7;
-    object-fit: cover;
-    
+    object-fit: cover;    
 }
 .quienes_somos-seccion{
     display: flex;
@@ -240,7 +295,7 @@ header {
     margin-top: 50px;
 
     width: 70%;
-    height: 500px;
+    height: 350px;
     
     display: flex;
     flex-direction: column;
@@ -251,20 +306,21 @@ header {
     color: white;
     font-size: 50px;
     font-family: 'Montserrat', sans-serif;
+
 }
 .quienes_somos-infoBox p{
     color: white;
     font-family: 'Montserrat', sans-serif;
     width: 65%;
     line-height: 25px;
+    margin-top: 20px;
+
 }
 
 .quienes_somos-second-box{
     width: 100%;
     height: 700px;
     margin-top: 60px;
-    margin-bottom: 100px;
-
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -273,23 +329,24 @@ header {
 }
 #quienes_somos-second-contenedor{
     width: 100%;
-    height: 65%;
+    height: 100%;
+    padding-top: 10px;
 
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
+
 .box{
     width: 15%;
-    height: 100%;
+    height: 70%;
     background-color: #1a1a1a;
     padding: 20px;
-    margin: 15px;
     border-radius: 12px;
     color: white;
     text-align: center;
     box-shadow: 0 0 10px rgb(236, 235, 235);
     transition: transform 0.3s ease;
-
 }
 
 .box:hover {
@@ -306,54 +363,13 @@ header {
     font-size: 1em;
     line-height: 1.5;
     padding-inline: 1.75rem;
+    margin-top: 25px;
+
+    height: 100px;
 }
 
 .box i {
     font-size: 70px;
     margin-top: 45px;
+
 }
-
-
-/*============== ACA IRIA EL FOOTER =============================*/
-
-footer {
-    margin-top: 50px;
-    background: #0e0e0e; /* Cambiar fondo del header */
-    display: flex; /*Ordenando y alineando los elementos dentro del footer*/
-    align-items: center; 
-    justify-content: space-between; 
-    border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
-    width: 100%;
-    min-height: 80px;
-    padding: 10px 0;
-}
-
-.copyrightTeam {
-    font-size: 15px;
-}
-
-.container-contenido-footer {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-    margin: 0;
-    padding-left: 10px;
-    font-size: 10px;
-    font-family: 'Montserrat', sans-serif;
-    color: #e8fde6;
-}
-
-.equipo-facultad {
-    margin: 0;
-    padding: 0;
-    display: flexbox;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: start;
-    list-style-type: none;
-}
-
-
-
