--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -378,46 +378,7 @@ main {
     margin-top: 45px;
 }
 
-/*============== ACA IRIA EL FOOTER =============================*/
 
-.footer-seccion {
-    margin-top: 50px;
-    background: #0e0e0e; /* Cambiar fondo del header */
-    display: flex; /*Ordenando y alineando los elementos dentro del footer*/
-    align-items: center; 
-    justify-content: space-between; 
-    border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
-    width: 100%;
-    min-height: 80px;
-    padding: 10px 0;
-}
-
-.copyrightTeam {
-    font-size: 20px;
-}
-
-.footer-container {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-    margin: 0;
-    padding-left: 10px;
-    font-size: 10px;
-    font-family: 'Montserrat', sans-serif;
-    color: #e8fde6;
-}
-
-.equipo-facultad {
-    margin: 0;
-    padding: 0;
-    display: flexbox;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: start;
-    list-style-type: none;
-}
 
 
 
@@ -631,4 +592,51 @@ main {
 
 .alimentacion-boton:hover::before {
     width: 12em;
+}
+
+/*============== ACA IRIA EL FOOTER =============================*/
+
+.footer-seccion {
+    margin-top: 50px;
+    background: #0e0e0e; /* Cambiar fondo del header */
+    display: flex; /*Ordenando y alineando los elementos dentro del footer*/
+    align-items: center; 
+    justify-content: center; 
+    border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
+    width: 100%;
+    min-height: 80px;
+    padding: 10px 0;
+}
+
+.footer-seccion ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.copyrightTeam {
+    font-size: 20px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    margin: 0;
+    padding-left: 10px;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
+    color: #e8fde6;
+}
+
+.equipo-facultad {
+    margin: 0;
+    padding: 0;
+    display: flexbox;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    list-style-type: none;
 }
