--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -64,9 +64,6 @@ nav > ul {
     text-decoration: none;
 }
 
-.txt-atlas:hover {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-}
 
 /* Nav container */
 .container-contenido-header {
@@ -89,7 +86,6 @@ nav > ul {
 
 /* Enlaces del menú */
 .txt-home {
-
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     text-decoration: none;
@@ -466,6 +462,20 @@ main {
     -1px -1px 5px #00ff55;
 }
 
+.rutina-boton a {
+    color: inherit;             /* Hereda el color del botón */
+    text-decoration: none;     /* Quita el subrayado */
+    display: flex;             /* Centra el texto dentro del botón */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+}
+
+
 .rutina-boton::before {
     content: '';
     width: 0;
@@ -637,4 +647,64 @@ main {
     align-items: center;
     text-align: start;
     list-style-type: none;
+}
+
+
+
+
+
+
+.section-table{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.table{
+    background: black;
+    width: 80%;
+    font-size: 20px;
+}
+
+.entrenamiento-title{
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;          
+    width: 80%;
+}
+
+.entrenamiento-title div h1{
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+}
+
+.entrenamiento-title div button{
+    background-color: #00ff55;
+    color: black;
+    transform: scale(1.2);
+    transform-origin: center;
+}
+.entrenamiento-title div button:hover{
+    background-color: #00ff55;
+    color: black;
+    transform: scale(1.2);
+    transform-origin: center;
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+}
+
+#button-volver{
+    margin-right: 30px;
+}
+
+
+.entrenamiento-title div a { 
+    text-decoration: none;      /* Saca el subrayado */
+    color: inherit;             /* Usa el color del botón */
+    font-size: inherit;
+    font-weight: inherit;
+    font-family: inherit;
 }
