--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -506,12 +506,20 @@ main {
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
+
 }
 
-.table{
+.table {
     background: black;
     width: 80%;
     font-size: 20px;
+}
+
+.table th, .table td {
+    white-space: nowrap; /* ← NO PERMITE MULTILÍNEA */
+    text-align: center;
+    padding: 10px;
+    vertical-align: middle;
 }
 
 .entrenamiento-title{
@@ -706,7 +714,6 @@ main {
     text-align: start;
     list-style-type: none;
 }
-
 
 
 
