--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -525,6 +525,19 @@ main {
     vertical-align: middle;
 }
 
+/* nth es el numero del encabezado y child es el contenido que esta en el encabezado osea el nth */
+.table td:nth-child(8), .table th:nth-child(8) {
+    white-space: normal;
+    max-width: 200px; 
+    word-wrap: break-word;
+}
+
+.table td:nth-child(2), .table th:nth-child(2) {
+    max-width: 180px;
+    white-space: normal;
+    word-wrap: break-word;
+}
+
 .entrenamiento-title{
     margin-bottom: 25px;
     display: flex;
