--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -679,6 +679,19 @@ dialog::backdrop {
     -1px -1px 5px #00ff55;
 }
 
+.alimentacion-boton a {
+    color: inherit;             /* Hereda el color del botón */
+    text-decoration: none;     /* Quita el subrayado */
+    display: flex;             /* Centra el texto dentro del botón */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+}
+
 .alimentacion-boton::before {
     content: '';
     width: 0;
