Modifique el link de style.css porque no me cargaba en el localhost8080. Baje un poco la altura del modal

--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -501,6 +501,12 @@ main {
 }
 
 /* ================== Entrenamiento y Ejercicios ============================ */
+
+/* MODALS */
+.modal-card{
+    margin-top: 8vh;
+}
+
 .section-table{
     display: flex;
     justify-content: center;
