--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -725,7 +725,7 @@ dialog::backdrop {
     background: #0e0e0e; /* Cambiar fondo del header */
     display: flex; /*Ordenando y alineando los elementos dentro del footer*/
     align-items: center; 
-    justify-content: center; 
+    justify-content: flex-start; 
     border-top: 1px solid #98fd92; /* Borde verde brillante arriba del footer */
     width: 100%;
     min-height: 80px;
@@ -734,7 +734,7 @@ dialog::backdrop {
 
 .footer-seccion ul {
     list-style: none;
-    padding: 0;
+    padding: 0 0 0 40px;
     margin: 0;
 }
 
@@ -764,6 +764,24 @@ dialog::backdrop {
     text-align: start;
     list-style-type: none;
 }
+
+/* ------------------------ AGREGADO HOY 20-07 --------------------- */
+
+/* Para el modal de agregar */
+#modal-agregar .modal-card-foot {
+    display: flex; /* Activando flexbox */
+    gap: 15px; /* Ajustando el valor para dar espacios entre botones */
+    justify-content: flex-end; /* Alinea los botones a la derecha, si lo quieren a la izquierda, se hace con flex-start */
+}
+
+/* Para el modal de editar */
+
+#modal-editar .modal-card-foot {
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+}
+
 
 
 
