Cambie algo en el style.css, borre el archivo docs.txt

--- a/Proyecto TP/frontend/css/style.css
+++ b/Proyecto TP/frontend/css/style.css
@@ -375,7 +375,13 @@ main {
     margin-top: 45px;
 }
 
+#icono-dieta {
+    margin-top: 60px;
+}
 
+#icono-organizacion {
+    margin-top: 40px;
+}
 
 
 
